# netsci2025

./: .gitignore  .webui_secret_key  pyproject.toml
.aim/: aim_db  run_metadata.sqlite
.aim/meta/chunks/004ece32aba74ddd985c7a97/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/chunks/0063dc243f7f4da9ad68a5b4/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/chunks/00d3c1f63d0c4e8895faf30a/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/chunks/00e7e467f26a4d4bb5dd4282/: 000009.sst  IDENTITY  LOG  LOG.old.1740402670911914  LOG.old.1740402670924558  MANIFEST-000004
.aim/meta/chunks/014a400508b140c1ab866c3c/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/chunks/0192b007dfd144fc8365e922/: 000009.sst  IDENTITY  LOG  MANIFEST-000004
.aim/meta/chunks/01dcc1159bff4cf5ac06bbfb/: 000009.sst  LOG  (+2 more)
.aim/meta/index/: 002141.sst  002143.sst  002152.sst  002161.sst  002170.sst  002179.sst  002188.sst  008742.sst  008744.sst  008753.sst  IDENTITY  LOG  LOG.old.1740394040028564  LOG.old.1740394040110544  LOG.old.1740394040183761  LOG.old.1740394040267597  LOG.old.1740394040363562  LOG.old.1740394040438375  LOG.old.1740394040514874  LOG.old.1740394040589295  LOG.old.1740394040661175  LOG.old.1740409691419935  LOG.old.1740409771708247  LOG.old.1740409783958714  LOG.old.1740409862347530  LOG.old.1740409862411417  LOG.old.1740409873808029  LOG.old.1740409873898849  LOG.old.1740409914278699  LOG.old.1740410064664122  MANIFEST-002183  MANIFEST-008748
notebooks/: create_data.ipynb
scripts/: data_loader.py  experiment.py  model_definition.py  training.py
(+4180 files in other folders)
